--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,9 @@
-FROM node:20-alpine
+FROM node:20
+
 WORKDIR /app
-COPY package*.json tsconfig.json ./
+COPY package*.json ./
 RUN npm install
-COPY src ./src
+COPY . .
+
 EXPOSE 4000
 CMD ["npm", "run", "dev"]
