--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/gestao_financeira
+MONGO_URI=mongodb://mongo:27017/gestao_financeira
 PORT=4000
 CORS_ORIGIN=http://localhost:5173
 AUTO_PAY_CRON=true
