--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,12 @@
 {
   "name": "gf-frontend",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0",
     "build": "vite build",
-    "preview": "vite preview --port 5173"
+    "preview": "vite preview --port 5173 --host 0.0.0.0"
   },
   "dependencies": {
     "axios": "^1.7.2",
