--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,17 @@
     "preview": "vite preview --port 5173 --host 0.0.0.0"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@tailwindcss/forms": "^0.5.10",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.7.2",
+    "chart.js": "^4.5.0",
+    "lucide-vue-next": "^0.544.0",
     "pinia": "^2.1.7",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14",
     "vue": "^3.4.31",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
